<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/numberSides"
        android:layout_width="395dp"
        android:layout_height="50dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="Enter number of sides" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/sideLengthInput"
        android:layout_width="395dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Length of Sides"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="354dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sideLengthInput">

        <RadioButton
            android:id="@+id/inches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="inches"
            android:text="Inches"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/feet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:baselineAligned="false"
            android:tag="feet"
            android:text="Feet"
            app:layout_constraintStart_toEndOf="@+id/inches"
            app:layout_constraintTop_toBottomOf="parent" />
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_marginStart="8dp"
        android:text="Update Length of Sides"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_marginStart="8dp"
        android:text="Update Number of Sides"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberSides" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginTop="8dp"
        android:background="#A9A9A9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />


    <TextView
        android:id="@+id/display_angles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/display_angles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/display_perimeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/display_perimeter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_angles" />

</android.support.constraint.ConstraintLayout>